Fixing alignment of item module cta buttons per issue #23

--- a/assets/scss/components/_modules.scss
+++ b/assets/scss/components/_modules.scss
@@ -82,6 +82,7 @@
     .item-cta {
       flex-grow: 1;
       display: flex;
+      align-items: center;
       flex-direction: column;
       margin-top: $padding-md;
       justify-content: flex-end;
